Use Integer.valueOf(), Boolean.valueOf() and Float.valueOf()